--- a/Aulas-HTML/exercicios/aula1/index.html
+++ b/Aulas-HTML/exercicios/aula1/index.html
@@ -14,3 +14,21 @@ Entrega:
  - Abrir um pull request para o repositório original (da Womakers)
  - Acompanhar o prazo e marcar a entrega no Classroom
 -->
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Site da Laís Furtado</title>
+        <link rel="stylesheet" href="style.css" />
+
+    </head>
+    <body>
+        <h1> Laís Furtado</h1>
+        <p> O que espero desse curso?</p>
+        <ul>
+<ol> Assimilar o básico de fronted</ol>
+<ol> Compartilhar conhecimento e trocar com alunas e mentoras</ol>
+<ol>Fazer parte de uma comunidade feminina que se apoia e se incentiva</ol>
+        </ul>
+    </body>
+</html>
