resolução da atividade 2 HTML usando o https://midianinja.org/ como  referencia

--- a/Aulas-HTML/exercicios/aula2/index.html
+++ b/Aulas-HTML/exercicios/aula2/index.html
@@ -21,3 +21,56 @@ Entrega:
  - Abrir um pull request para o repositório original (da Womakers)
  - Acompanhar o prazo e marcar a entrega no Classroom
 -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Confira o time completo de colunistas do Mídia NINJA!</title>
+</head>
+<body>
+  <header> 
+    <nav> 
+      <li>
+        <ul> <img src="https://midianinja.org/files/2017/04/logo.png"></ul>
+        <ul>QUEM SOMOS </ul>
+        <ul> NOTÍCIAS </ul>
+        <ul> OPINIÃO</ul>
+        <ul> QUARENTENA PROJETADA</ul>
+        <ul>LOJA</ul>
+        <ul> FINANCIE</ul>
+        <ul> FAÇA PARTE</ul>
+        <ul>CONTATO</ul>
+        </ul>
+      </li>
+    </nav>
+  </header>
+
+  <main>
+    <h1>notícias</h1>
+______________________________________________
+<article>
+  <section>
+  <img src="https://midianinja.org/files/2020/09/Modelo-Novo-Not%C3%ADcia-%E2%80%94-Feed-%E2%80%94-NINJA-44-e1599884249763-400x250.png"> 
+  <h2> No Nordeste, domésticas recebem em média menos de R$ 500 por mês</h2>
+<p>por NINJA | set 12,2020</p>
+<h3>Três de cada quatro domésticas no Brasil não tem carteira assinada.</h3>
+</section>
+</article>
+
+<article>
+  <section>
+  <img src="https://midianinja.org/files/2020/09/49080662861_58f832ed8b_k-400x250.jpg"> 
+  <h2> Dia do Cerrado: Segundo maior bioma brasileiro está extremamente ameaçado</h2>
+<p>por NINJA | set 11,2020</p>
+<h3>Berço das águas. Ocupando cerca de 22% do território nacional, é o segundo maior bioma brasileiro, se estendendo por 12 estado, e chama atenção pela sua diversidade.</h3>
+</section>
+</article>
+  </main>
+
+
+  <br> 
+<footer>DESENVOLVIDO E HOSPEDADO PELA REDE LIVRE</footer>
+</body>
+</html>
