Commit do exercicio 3 de HTML

--- a/Aulas-HTML/exercicios/aula3/index.html
+++ b/Aulas-HTML/exercicios/aula3/index.html
@@ -19,11 +19,13 @@ Entrega:
     <meta charset="UTF-8" />
     <title>Exercício 3</title>
   </head>
+
   <body>
-    <h1>seu nome e sobrenome</h1>
+    <h1>Laís Furtado</h1>
 
-    <img src="./img1.jpg" alt="" />
+    <img src="./img1.jpg" alt="Mãe ajudando filha a colocar joelheiras para andar de patins"/>
 
-    <img src="./img2.jpg" alt="time" />
+    <img src="./img2.jpg" alt="Equipe de trabalho de jovens em circulo unindo as mãos ao centro" />
+    
   </body>
 </html>
