commitando ajustes CSS 1 e 2

--- a/aula-css/exercicios/photo-grid/aula-1/index.html
+++ b/aula-css/exercicios/photo-grid/aula-1/index.html
@@ -30,8 +30,9 @@
 
             <div class="item">
                 <img src="imagens/IMG_20191029_131349_132.jpg" alt="mulher">
+                <div class="item_detail">
                 <span> Lorem Piscum</span>
-        
+        </div>
             </div>
 
             <div class="item">
@@ -63,5 +64,8 @@
             </div>
         </div>
     </div>
+    <footer>
+        <p>Desenvolvido por Laís Furtado | Primeiros passos em Front-end | WomakersCode</p>
+    </footer>
 </body>
 </html>
