commit dos exercicios 1 e 2 de Lógica.

--- a/aula-logica/exercicios/Portugol Webstudio.html
+++ b/aula-logica/exercicios/Portugol Webstudio.html
@@ -8,15 +8,15 @@
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/ide/src/main/resources/br/univali/ps/ui/icones/Dark/grande/light-bulb.png">
     <link rel="icon" href="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/ide/src/main/resources/br/univali/ps/ui/icones/Dark/grande/light-bulb.png">
 
-    <link href="./Index_exercicios1e2_files/css" rel="stylesheet">
-    <link rel="stylesheet" href="./Index_exercicios1e2_files/ax5layout.css" integrity="sha256-QRw3D/1gkEfevaGf2/ELaIfuko9MqVQqAN3gqORuiYc=" crossorigin="anonymous">
-    <link rel="stylesheet" href="./Index_exercicios1e2_files/style.min.css" integrity="sha256-2hTiI2p4bt1TnBnDtbTJ+UMNBVdzmtd5Td8+65lR1t0=" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="./Index_exercicios1e2_files/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="./Index_exercicios1e2_files/res.css">
-    <link rel="stylesheet" type="text/css" href="./Index_exercicios1e2_files/portugol.css">
-    <link rel="stylesheet" type="text/css" href="./Index_exercicios1e2_files/ide.css">
+    <link href="./Portugol Webstudio_files/css" rel="stylesheet">
+    <link rel="stylesheet" href="./Portugol Webstudio_files/ax5layout.css" integrity="sha256-QRw3D/1gkEfevaGf2/ELaIfuko9MqVQqAN3gqORuiYc=" crossorigin="anonymous">
+    <link rel="stylesheet" href="./Portugol Webstudio_files/style.min.css" integrity="sha256-2hTiI2p4bt1TnBnDtbTJ+UMNBVdzmtd5Td8+65lR1t0=" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="./Portugol Webstudio_files/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="./Portugol Webstudio_files/res.css">
+    <link rel="stylesheet" type="text/css" href="./Portugol Webstudio_files/portugol.css">
+    <link rel="stylesheet" type="text/css" href="./Portugol Webstudio_files/ide.css">
 
-    <script async="" src="./Index_exercicios1e2_files/analytics.js.download"></script><script>
+    <script async="" src="./Portugol Webstudio_files/analytics.js.download"></script><script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -39,7 +39,7 @@
 
     <div id="ide" class="hidden-xs">
         <ul class="tabs">
-            <li><a id="anchor-inicio" href="https://portugol-webstudio.cubos.io/ide#tab-inicio" class=""><span class="portugol-icon"></span> Portugol Webstudio</a></li><li class="secondary secondary-file"><a href="https://portugol-webstudio.cubos.io/ide#tab-tf51d1a45-08ae-4034-a77b-b58254b5681c" id="anchor-tf51d1a45-08ae-4034-a77b-b58254b5681c" class="active"><span class="portugol-icon"></span> <span class="name">Sem título</span> <span title="Fechar aba" class="close-icon"></span></a></li><li id="tab-add" title="Novo"><span class="action action-add">+</span></li>
+            <li><a id="anchor-inicio" href="https://portugol-webstudio.cubos.io/ide#tab-inicio" class=""><span class="portugol-icon"></span> Portugol Webstudio</a></li><li class="secondary secondary-file"><a href="https://portugol-webstudio.cubos.io/ide#tab-tf51d1a45-08ae-4034-a77b-b58254b5681c" id="anchor-tf51d1a45-08ae-4034-a77b-b58254b5681c" class="active"><span class="portugol-icon"></span> <span class="name">index</span> <span title="Fechar aba" class="close-icon"></span></a></li><li id="tab-add" title="Novo"><span class="action action-add">+</span></li>
         </ul>
 
         <div class="tab" id="tab-inicio" style="display: none;">
@@ -48,33 +48,33 @@
                     <div data-dock-panel="{dock:&#39;center&#39;}" id="exc" style="position: relative; width: 0px; height: 0px;" class="dock-panel-center">
                         <div class="row" id="btl">
                             <button class="action-add">
-                                <img src="./Index_exercicios1e2_files/newfile.png" class="img-responsive">
+                                <img src="./Portugol Webstudio_files/newfile.png" class="img-responsive">
                                 <span>Novo Arquivo</span>
                             </button>
 
                             <button class="action-open">
-                                <img src="./Index_exercicios1e2_files/openfile.png" class="img-responsive">
+                                <img src="./Portugol Webstudio_files/openfile.png" class="img-responsive">
                                 <span>Abrir Arquivo</span>
                             </button>
 
                             <button class="action-ajuda">
-                                <img src="./Index_exercicios1e2_files/help.png" class="img-responsive">
+                                <img src="./Portugol Webstudio_files/help.png" class="img-responsive">
                                 <span>Ajuda</span>
                             </button>
 
                             <a href="https://github.com/dgadelha/Portugol-Webstudio" target="_blank">
-                                <img src="./Index_exercicios1e2_files/git-white.png" style="max-height:64px" class="img-responsive">
+                                <img src="./Portugol Webstudio_files/git-white.png" style="max-height:64px" class="img-responsive">
                                 <span>Código-fonte</span>
                             </a>
 
                             <a href="https://cubos.io/?utm_source=Portugol-Webstudio&amp;utm_medium=ide&amp;utm_campaign=webstudio-hosting" rel="external follow" target="_blank" class="pull-right partner-info">
                                 <span>Patrocinado por</span>
-                                <img src="./Index_exercicios1e2_files/cubos-white.png" style="max-height:64px" class="img-responsive" alt="Cubos">
+                                <img src="./Portugol Webstudio_files/cubos-white.png" style="max-height:64px" class="img-responsive" alt="Cubos">
                             </a>
                         </div>
 
                         <div id="srv" style="position:absolute;bottom:20%;z-index:9999;width:100%;text-align:center">
-                            <a href="https://bit.ly/3d4XvXV" rel="external nofollow" target="_blank"><img style="max-width:60vh" src="./Index_exercicios1e2_files/survey.jpg"></a>
+                            <a href="https://bit.ly/3d4XvXV" rel="external nofollow" target="_blank"><img style="max-width:60vh" src="./Portugol Webstudio_files/survey.jpg"></a>
                         </div>
 
                         <div class="row row-exemplo-desc hidden-xs">
@@ -88,7 +88,7 @@
 
                     <div data-dock-panel="{dock:&#39;right&#39;,split:true,width:250,minWidth:200,maxWidth:400}" class="hidden-xs dock-panel-right" style="overflow-y: auto; width: 250px; height: 0px;" id="leftPanel">
                         <div class="res-cat res-cat-wide">
-                            <img src="./Index_exercicios1e2_files/light_pix.png"> <span>Exemplos</span>
+                            <img src="./Portugol Webstudio_files/light_pix.png"> <span>Exemplos</span>
                         </div>
 
                         <div class="res-content">
@@ -98,25 +98,25 @@
                 <div data-splitter="" class="dock-panel-right" style="width: 6px; height: 0px; right: 250px;"></div></div>
             </div>
         </div>
-    <div id="tab-tf51d1a45-08ae-4034-a77b-b58254b5681c" class="tab" style=""><iframe src="./Index_exercicios1e2_files/editor.html"></iframe></div></div>
+    <div id="tab-tf51d1a45-08ae-4034-a77b-b58254b5681c" class="tab" style=""><iframe src="./Portugol Webstudio_files/editor.html"></iframe></div></div>
 
     <div class="hide" id="special"><input type="file" id="file-input"></div>
 
     <script type="text/javascript"> window.TextEncoder = window.TextDecoder = null; </script>
-    <script src="./Index_exercicios1e2_files/jquery.min.js.download" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="./Index_exercicios1e2_files/ace.js.download" integrity="sha256-U//RSeH3TR3773Rk+1lAufJnRjEaG5LcdbvGV72kHEM=" crossorigin="anonymous"></script>
-    <script src="./Index_exercicios1e2_files/ax5core.min.js.download" integrity="sha256-tDNeD6BLE+000MFqAWAr8fCAkLSoDx5tfEXlsIWs1Pk=" crossorigin="anonymous"></script>
-    <script src="./Index_exercicios1e2_files/ax5layout.min.js.download" integrity="sha256-qE7zhoPWS5gzEc10S5h0BCWLYflsYjL6oqCflBYMQ5A=" crossorigin="anonymous"></script>
-    <script src="./Index_exercicios1e2_files/Blob.js.download" integrity="sha256-Sma1QPTC1m7NEZBwwAYn6OdljXuOC6LfBaGoBwrPerg=" crossorigin="anonymous"></script>
-    <script src="./Index_exercicios1e2_files/FileSaver.min.js.download" integrity="sha256-Sf4Tr1mzejErqH+d3jzEfBiRJAVygvjfwUbgYn92yOU=" crossorigin="anonymous"></script>
-    <script src="./Index_exercicios1e2_files/encoding-indexes.js.download" integrity="sha256-0P1P7TKtsEVwY070xQ4v2Ss8fyQLaORAPbHPXfYJZj8=" crossorigin="anonymous"></script>
-    <script src="./Index_exercicios1e2_files/encoding.js.download" integrity="sha256-E9b12NeEmrVSXHs978RmbR1TsqL7+Xd+tHA5lWzi0Mc=" crossorigin="anonymous"></script>
-    <script src="./Index_exercicios1e2_files/jstree.min.js.download" integrity="sha256-So1t0NS1GeCJlhjvbf3o+JHWA+60Rkrj9Qu0waUEMoU=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="./Index_exercicios1e2_files/socket.io.js.download"></script>
+    <script src="./Portugol Webstudio_files/jquery.min.js.download" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="./Portugol Webstudio_files/ace.js.download" integrity="sha256-U//RSeH3TR3773Rk+1lAufJnRjEaG5LcdbvGV72kHEM=" crossorigin="anonymous"></script>
+    <script src="./Portugol Webstudio_files/ax5core.min.js.download" integrity="sha256-tDNeD6BLE+000MFqAWAr8fCAkLSoDx5tfEXlsIWs1Pk=" crossorigin="anonymous"></script>
+    <script src="./Portugol Webstudio_files/ax5layout.min.js.download" integrity="sha256-qE7zhoPWS5gzEc10S5h0BCWLYflsYjL6oqCflBYMQ5A=" crossorigin="anonymous"></script>
+    <script src="./Portugol Webstudio_files/Blob.js.download" integrity="sha256-Sma1QPTC1m7NEZBwwAYn6OdljXuOC6LfBaGoBwrPerg=" crossorigin="anonymous"></script>
+    <script src="./Portugol Webstudio_files/FileSaver.min.js.download" integrity="sha256-Sf4Tr1mzejErqH+d3jzEfBiRJAVygvjfwUbgYn92yOU=" crossorigin="anonymous"></script>
+    <script src="./Portugol Webstudio_files/encoding-indexes.js.download" integrity="sha256-0P1P7TKtsEVwY070xQ4v2Ss8fyQLaORAPbHPXfYJZj8=" crossorigin="anonymous"></script>
+    <script src="./Portugol Webstudio_files/encoding.js.download" integrity="sha256-E9b12NeEmrVSXHs978RmbR1TsqL7+Xd+tHA5lWzi0Mc=" crossorigin="anonymous"></script>
+    <script src="./Portugol Webstudio_files/jstree.min.js.download" integrity="sha256-So1t0NS1GeCJlhjvbf3o+JHWA+60Rkrj9Qu0waUEMoU=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="./Portugol Webstudio_files/socket.io.js.download"></script>
     <script type="text/javascript">var d={baseUrl:((window.location.pathname.length<2)?"/":window.location.pathname+"/"),exemplo:{nome:false,codigo:false},tabs:[]};</script>
-    <script type="text/javascript" src="./Index_exercicios1e2_files/mode-portugol.js.download"></script>
-    <script type="text/javascript" src="./Index_exercicios1e2_files/portugol.js.download"></script>
-        <script type="text/javascript" src="./Index_exercicios1e2_files/ide.js.download"></script>
+    <script type="text/javascript" src="./Portugol Webstudio_files/mode-portugol.js.download"></script>
+    <script type="text/javascript" src="./Portugol Webstudio_files/portugol.js.download"></script>
+        <script type="text/javascript" src="./Portugol Webstudio_files/ide.js.download"></script>
     
 
 </body></html>
